--- a/index.html
+++ b/index.html
@@ -16,29 +16,29 @@
     </header>
 
     <main class="gallery">
-      <a class="fancybox gallery-item" rel="group" href="img/photos/01.jpg" title="I love hay bales. Took this snap on a drive through the countryside past some straw fields."><img src="img/photos/thumbnails/01.jpg" alt="Photo of Hay Bales"></a>
+      <a class="fancybox gallery-item" data-fancybox-group="group" href="img/photos/01.jpg" title="I love hay bales. Took this snap on a drive through the countryside past some straw fields."><img src="img/photos/thumbnails/01.jpg" alt="Photo of Hay Bales"></a>
 
-      <a class="fancybox gallery-item" rel="group" href="img/photos/02.jpg" title="The lake was so calm today. We had a great view of the snow on the mountains from here."><img src="img/photos/thumbnails/02.jpg" alt="Photo of Lake"></a>
+      <a class="fancybox gallery-item" data-fancybox-group="group" href="img/photos/02.jpg" title="The lake was so calm today. We had a great view of the snow on the mountains from here."><img src="img/photos/thumbnails/02.jpg" alt="Photo of Lake"></a>
 
-      <a class="fancybox gallery-item" rel="group" href="img/photos/03.jpg" title="I hiked to the top of the mountain and got this picture of the canyon and trees below."><img src="img/photos/thumbnails/03.jpg" alt="Photo of Canyon"></a>
+      <a class="fancybox gallery-item" data-fancybox-group="group" href="img/photos/03.jpg" title="I hiked to the top of the mountain and got this picture of the canyon and trees below."><img src="img/photos/thumbnails/03.jpg" alt="Photo of Canyon"></a>
 
-      <a class="fancybox gallery-item" rel="group" href="img/photos/04.jpg" title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today."><img src="img/photos/thumbnails/04.jpg" alt="Photo of Iceberg"></a>
+      <a class="fancybox gallery-item" data-fancybox-group="group" href="img/photos/04.jpg" title="It was amazing to see an iceberg up close, it was so cold but didn’t snow today."><img src="img/photos/thumbnails/04.jpg" alt="Photo of Iceberg"></a>
 
-      <a class="fancybox gallery-item" rel="group" href="img/photos/05.jpg" title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."><img src="img/photos/thumbnails/05.jpg" alt="Photo of Desert"></a>
+      <a class="fancybox gallery-item" data-fancybox-group="group" href="img/photos/05.jpg" title="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons."><img src="img/photos/thumbnails/05.jpg" alt="Photo of Desert"></a>
 
-      <a class="fancybox gallery-item" rel="group" href="img/photos/06.jpg" title="Fall is coming, I love when the leaves on the trees start to change color."><img src="img/photos/thumbnails/06.jpg" alt="Photo of Fall"></a>
+      <a class="fancybox gallery-item" data-fancybox-group="group" href="img/photos/06.jpg" title="Fall is coming, I love when the leaves on the trees start to change color."><img src="img/photos/thumbnails/06.jpg" alt="Photo of Fall"></a>
 
-      <a class="fancybox gallery-item" rel="group" href="img/photos/07.jpg" title="I drove past this plantation yesterday, everything is so green!"><img src="img/photos/thumbnails/07.jpg" alt="Photo of Plantation"></a>
+      <a class="fancybox gallery-item" data-fancybox-group="group" href="img/photos/07.jpg" title="I drove past this plantation yesterday, everything is so green!"><img src="img/photos/thumbnails/07.jpg" alt="Photo of Plantation"></a>
 
-      <a class="fancybox gallery-item" rel="group" href="img/photos/08.jpg" title="My summer vacation to the Oregon Coast. I love the sandy dunes!"><img src="img/photos/thumbnails/08.jpg" alt="Photo of Dunes"></a>
+      <a class="fancybox gallery-item" data-fancybox-group="group" href="img/photos/08.jpg" title="My summer vacation to the Oregon Coast. I love the sandy dunes!"><img src="img/photos/thumbnails/08.jpg" alt="Photo of Dunes"></a>
 
-      <a class="fancybox gallery-item" rel="group" href="img/photos/09.jpg" title="We enjoyed a quiet stroll down this countryside lane."><img src="img/photos/thumbnails/09.jpg" alt="Photo of Countryside Lane"></a>
+      <a class="fancybox gallery-item" data-fancybox-group="group" href="img/photos/09.jpg" title="We enjoyed a quiet stroll down this countryside lane."><img src="img/photos/thumbnails/09.jpg" alt="Photo of Countryside Lane"></a>
 
-      <a class="fancybox gallery-item" rel="group" href="img/photos/10.jpg" title="Sunset at the coast! The sky turned a lovely shade of orange."><img src="img/photos/thumbnails/10.jpg" alt="Photo of Sunset"></a>
+      <a class="fancybox gallery-item" data-fancybox-group="group" href="img/photos/10.jpg" title="Sunset at the coast! The sky turned a lovely shade of orange."><img src="img/photos/thumbnails/10.jpg" alt="Photo of Sunset"></a>
 
-      <a class="fancybox gallery-item" rel="group" href="img/photos/11.jpg" title="I did a tour of a cave today and the view of the landscape below was breathtaking."><img src="img/photos/thumbnails/11.jpg" alt="Photo of Cave"></a>
+      <a class="fancybox gallery-item" data-fancybox-group="group" href="img/photos/11.jpg" title="I did a tour of a cave today and the view of the landscape below was breathtaking."><img src="img/photos/thumbnails/11.jpg" alt="Photo of Cave"></a>
 
-      <a class="fancybox gallery-item" rel="group" href="img/photos/12.jpg" title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."><img src="img/photos/thumbnails/12.jpg" alt="Photo of Bluebells"></a>
+      <a class="fancybox gallery-item" data-fancybox-group="group" href="img/photos/12.jpg" title="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in."><img src="img/photos/thumbnails/12.jpg" alt="Photo of Bluebells"></a>
 
     </main>
 
